backup/eshop-services/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: eshop-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: eshop-frontend
              servicePort: 8080
          - path: /api
            backend:
              serviceName: eshop-backend
              servicePort: 8090
          - path: /static
            backend:
              serviceName: eshop-backend
              servicePort: 8090
          - path: /api/carts
            backend:
              serviceName: eshop-cartservice
              servicePort: 8091
          - path: /api/products
            backend:
              serviceName: eshop-productservice
              servicePort: 8092
          - path: /api/recommends
            backend:
              serviceName: eshop-recommendservice
              servicePort: 8093
          - path: /api/currencies
            backend:
              serviceName: eshop-currencyservice
              servicePort: 8094
          - path: /api/ads
            backend:
              serviceName: eshop-adservice
              servicePort: 8095
